# BTW2025-TSL-Tutorial

./: .gitmodules  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  DockerfileARM  devcontainer.json
.githooks/: post-commit  post-merge  pre-commit
scripts/: fp16.sh  setup_hooks.sh  setup_tsl.sh
src/: column.hpp  filter_aggregate.cpp  filter_aggregate.hpp  filter_aggregate_live.hpp  hello_tsl.cpp  simd_utils.hpp  utils.hpp
